# cursor-hub

./: AGENTS.md  CATALOG.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  TODO.md  design-log.mdc  pyproject.toml  senior-teacher.mdc
.github/workflows/: validate.yml
cursor_hub/: __init__.py  __main__.py  cli.py  installer.py
design-log/: README.md
docs/: authoring-guidelines.md  command-authoring-examples.md  cursor-primitives.md  pack-versioning.md  using-packs.md
examples/: feature-workflow.md
packs/cursor/_shared/: pack.yml
packs/cursor/design-log/: pack.yml
packs/cursor/documentation/: pack.yml
packs/cursor/js-ts/: pack.yml
packs/cursor/js-ts/.cursor/: README.md
packs/cursor/js-ts/bugfix/: pack.yml
packs/cursor/js-ts/design-review/: pack.yml
packs/cursor/js-ts/implementation/: pack.yml
packs/cursor/js-ts/refactor/: pack.yml
packs/cursor/js-ts/review/: pack.yml
packs/cursor/js-ts/testing/: pack.yml
packs/cursor/languages/: pack.yml
packs/cursor/languages/js-ts/: manifest.yml
packs/cursor/python/: pack.yml
packs/cursor/rust-bugfix/: pack.yml
packs/cursor/rust-design-review/: pack.yml
packs/cursor/rust-implementation/: pack.yml
packs/cursor/rust-review/: pack.yml
packs/cursor/rust-testing/: pack.yml
packs/cursor/security/: pack.yml
packs/cursor/terraform/: pack.yml
skills/: README.md
skills/rust-best-practices/: SKILL.md  reference-api-guidelines.md  reference-projectrules.md
tools/: export_design_logs_mongo.py  install.py  new_design_log.py  requirements.txt  validate_packs.py  validate_workflow_design_log.py
(+142 files in other folders)
